# nnt

./: CMakeLists.txt
src/: main.cpp
